tests/paczka2/big_fuzzy/31228466.err
Error in line 11: S738 A85 13,2
Error in line 17: S738 S852 2õ7
Error in line 7: uIlUxP S736 94,9
Error in line 18: uIlUxP A85 71,3
Error in line 38: BXmMAWd1wA S738 255,0
Error in line 40: 9AZ52 S852 27,0
Error in line 36: S738 S852 1,3
Error in line 61: kt7z3G1e S736 75,43
Error in line 47: kt7z3G1e S736 24,6
Error in line 30: YEAsKyw S852 137,3
Error in line 58: 9AZ52 A85 76,9
Error in line 62: kt7z3G1e S852 5,7
Error in line 68: kt7z3G1e S736 13,5
Error in line 70: kt7z3G1e S738 65,1
Error in line 86: S738 S738 187,0
Error in line 103: YEAsKyw A85 76,95
Error in line 100: S738 S852 18,4
Error in line 105: S738 S738 77,7
Error in line 102: YEAsKyw A85 26,2
Error in line 135: S738 S738 17,6
Error in line 137: 9AZ52 S736 75,3
Error in line 155: 9AZ52 S738 7,5
Error in line 143: BXmMAWd1wA A85 1,4
Error in line 161: BXmMAWd1wA S736 69,2
Error in line 166: YEAsKyw S852 91,72
Error in line 160: 9AZ52 S736 49,7
Error in line 163: sHdz S736 63,4
Error in line 175: sHdz A85 13,70
Error in line 173: sHdz S738 77,9
Error in line 176: BXmMAWd1wA S852 374,0
Error in line 184: BXmMAWd1wA S738 58,5
Error in line 192: uIlUxP S736 79,9
Error in line 169: YEAsKyw S852 363,9
Error in line 182: S738 S738 30,2
Error in line 206: kt7z3G1e S736 91,0
Error in line 199: uIlUxP S738 14,9
Error in line 218: YEAsKyw A85 24,3
Error in line 221: uIlUxP S736 6,2
Error in line 229: S738 S852 4,
Error in line 230: 9AZ52 S852 52,7
Error in line 232: BXmMAWd1wA S736 02,1
Error in line 239: S738 S852 112,0
Error in line 233: YEAsKyw S852 73,4
